--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 </head>
 
 <body class="bg-dark">
-
+<main class="d-flex flex-column-reverse flex-md-column">
     <nav class="navbar navbar-light navbar-expand-md bg-danger gap-2">
         <span class="fs-4 mx-3 text-black">Mehdi Benkebouche</span>
         <button class="navbar-toggler light" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu"
             aria-controls="#toggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation"> <span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse mx-3 gap-3" id="toggleMobileMenu">
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button" data-bs-target="#carouselcard"
-                    data-bs-slide-to="0">Profil</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button" data-bs-target="#carouselcard"
-                    data-bs-slide-to="1">Diplomes</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button" data-bs-target="#carouselcard"
-                    data-bs-slide-to="2">XP pro</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button" data-bs-target="#carouselcard"
-                    data-bs-slide-to="3">XP Dev</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button" data-bs-target="#carouselcard"
-                    data-bs-slide-to="4">Portofolio dev</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button" data-bs-target="#carouselcard"
-                    data-bs-slide-to="5">Contact</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button" data-bs-target="#carouselcard"
-                    data-bs-slide-to="6">Autre</button></div>
+            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="0">Profil</button></div>
+            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="1">Diplomes</button></div>
+            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="2">XP pro</button></div>
+            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="3">XP Dev</button></div>
+            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="4">Portofolio dev</button></div>
+            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="5">Autre</button></div>
+            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="6">Contact</button></div>
         </div>
     </nav>
 
@@ -41,15 +41,13 @@
                 <div class="container col-xxl-8 px-4 py-5">
                     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                         <div class="col-10 col-sm-8 col-lg-6">
-                            <img src="assets/img/IMG_20210609_125136_882.jpg"
-                                class="d-block mx-lg-auto img-fluid rounded-2" alt="Photo de moi" width="700"
-                                height="500">
+                            <img src="assets/img/IMG_2542.jpg" class="d-block mx-lg-auto img-fluid rounded-2"
+                                alt="Photo de moi" width="700" height="500">
                         </div>
                         <div class="col-lg-6">
                             <h1 class="display-5 fw-bold lh-1 mb-3 text-white">Mehdi Benkebouche
                             </h1>
-                            <p class="lead text-white">Bla bla bla webdev blabla bla mon carousel ne marche plus je sais
-                                pas pourquoi edit : c'est bon il marche jsp pk surement pck je suis un génie</p>
+                            <p class="lead text-white">Web Dev junior passioné d'informatique et de musique</p>
                         </div>
                     </div>
                 </div>
@@ -123,12 +121,14 @@
                         <div class="feature col">
                             <div class="feature-icon">
                                 <svg class="bi" width="1em" height="1em">
-                                    <img src="assets/img/html5-brands.svg" alt="" style="height: 4em; width: 4em; filter: invert(1);"></svg>
+                                    <img src="assets/img/html5-brands.svg" alt=""
+                                        style="height: 4em; width: 4em; filter: invert(1);"></svg>
                             </div>
                             <h2>HTML5</h2>
                             <div class="progress">
-                                <div class="progress-bar text-black bg-danger progress-bar-striped progress-bar-animated" role="progressbar"
-                                    aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">65%
+                                <div class="progress-bar text-black bg-danger progress-bar-striped progress-bar-animated"
+                                    role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"
+                                    style="width: 40%">40%
                                 </div>
                             </div>
                         </div>
@@ -140,8 +140,9 @@
                             </div>
                             <h2>CSS3</h2>
                             <div class="progress">
-                                <div class="progress-bar text-black bg-danger progress-bar-striped progress-bar-animated" role="progressbar"
-                                    aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">30%
+                                <div class="progress-bar text-black bg-danger progress-bar-striped progress-bar-animated"
+                                    role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"
+                                    style="width: 30%">30%
                                 </div>
                             </div>
                         </div>
@@ -153,8 +154,9 @@
                             </div>
                             <h2>BOOTSTRAP5</h2>
                             <div class="progress">
-                                <div class="progress-bar text-black bg-danger progress-bar-striped progress-bar-animated" role="progressbar"
-                                    aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%">15%
+                                <div class="progress-bar text-black bg-danger progress-bar-striped progress-bar-animated"
+                                    role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"
+                                    style="width: 15%">15%
                                 </div>
                             </div>
                         </div>
@@ -172,8 +174,10 @@
                                         style="height: 4em; width: 4em; filter: invert(1);"></svg>
                             </div>
                             <h2>Exercice carte flexbox</h2>
-                            <p>Exercice portant sur les flexbox et le responsive sans media query réalisé lors de la première semaine de formation web dev</p>
-                            <a href="https://jidess.github.io/Exercicehtml/ExoCarteLeMaudit.html" target="_blank" class="btn btn-danger">
+                            <p>Exercice portant sur les flexbox et le responsive sans media query réalisé lors de la
+                                première semaine de formation web dev</p>
+                            <a href="https://jidess.github.io/Exercicehtml/ExoCarteLeMaudit.html" target="_blank"
+                                class="btn btn-danger">
                                 Voir
                             </a>
                         </div>
@@ -184,10 +188,47 @@
                                         style="height: 4em; width: 4em"></svg>
                             </div>
                             <h2>Exercice Scrum</h2>
-                            <p>Exercice réalisé lors de la seconde semaine de formation web dev, j'ai du assumé le role de chef de projet et de scrum master</p>
-                            <a href="https://jidess.github.io/Site_Bourse_High_Tech/" target="_blank" class="btn btn-danger">
+                            <p>Exercice réalisé lors de la seconde semaine de formation web dev, j'ai du assumé le role
+                                de chef de projet et de scrum master</p>
+                            <a href="https://jidess.github.io/Site_Bourse_High_Tech/" target="_blank"
+                                class="btn btn-danger">
                                 Voir
                             </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item w-100">
+                <div class="container px-4 py-5" id="custom-cards">
+                    <h2 class="pb-2 border-bottom border-danger text-white">Autre</h2>
+
+                    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                                style="background-image: url('unsplash-photo-1.jpg');">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Formateur Anglais</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                                style="background-image: url('assets/img/IMG_MU.jpg'); background-size: 100% 100% ;">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Compositeur</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                                style="background-image: url('unsplash-photo-3.jpg');">
+                                <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Format PDF
+                                    </h2>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -213,49 +254,12 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item w-100">
-                <div class="container px-4 py-5" id="custom-cards">
-                    <h2 class="pb-2 border-bottom border-danger text-white">Autre</h2>
-
-                    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-                        <div class="col">
-                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                                style="background-image: url('unsplash-photo-1.jpg');">
-                                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Formateur Anglais</h2>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col">
-                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                                style="background-image: url('unsplash-photo-2.jpg');">
-                                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Compositeur</h2>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col">
-                            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                                style="background-image: url('unsplash-photo-3.jpg');">
-                                <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">CV Format PDF
-                                    </h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
 
     </Section>
 
-
-    <footer>
-
-    </footer>
+</main>
+   
 
 
 
