--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
 
-    <Section id="carouselcard" class="carousel slide mt-2 bg-black bg-opacity-50 rounded-3 shadow-lg">
+    <Section id="carouselcard" class="carousel slide mt-2 bg-black bg-opacity-50 rounded-3 shadow-lg d-flex align-items-stretch">
         <div class="carousel-inner">
             <div class="carousel-item active ">
                 <div class="container col-xxl-8 px-4 py-5">
