--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-dark">
-<main class="d-flex flex-column-reverse flex-md-column">
+<main class="d-flex flex-column-reverse flex-md-column vh-100">
     <nav class="navbar navbar-light navbar-expand-md bg-danger gap-2">
         <span class="fs-4 mx-3 text-black">Mehdi Benkebouche</span>
         <button class="navbar-toggler light" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu"
