--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark">
+<body class="bg-black">
 <main class="d-flex flex-column-reverse flex-md-column vh-100">
     <nav class="navbar navbar-light navbar-expand-md bg-danger gap-2">
         <span class="fs-4 mx-3 text-black">Mehdi Benkebouche</span>
