--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
 </head>
 
 <body class="bg-black">
-<main class="d-flex flex-column-reverse flex-md-column vh-100">
-    <nav class="navbar navbar-light navbar-expand-md bg-danger gap-2">
-        <span class="fs-4 mx-3 text-black">Mehdi Benkebouche</span>
+<main class="d-flex flex-column-reverse flex-md-column vh-100" id="particles-js">
+    <nav class="navbar navbar-dark navbar-expand-md bg-black border-bottom border-top border-danger gap-2">
+        <span class="fs-4 mx-3 text-secondary">Mehdi Benkebouche</span>
         <button class="navbar-toggler light" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu"
             aria-controls="#toggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation"> <span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse mx-3 gap-3" id="toggleMobileMenu">
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+            <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
                     data-bs-target="#carouselcard" data-bs-slide-to="0">Profil</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+            <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
                     data-bs-target="#carouselcard" data-bs-slide-to="1">Diplomes</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
-                    data-bs-target="#carouselcard" data-bs-slide-to="2">XP pro</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
-                    data-bs-target="#carouselcard" data-bs-slide-to="3">XP Dev</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
-                    data-bs-target="#carouselcard" data-bs-slide-to="4">Portofolio dev</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+            <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="2">Experience</button></div>
+            <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="3">compertence</button></div>
+            <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
+                    data-bs-target="#carouselcard" data-bs-slide-to="4">Portofolio</button></div>
+            <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
                     data-bs-target="#carouselcard" data-bs-slide-to="5">Autre</button></div>
-            <div class="nav-item"> <button class="btn btn-dark my-1 mx-auto" type="button"
+            <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
                     data-bs-target="#carouselcard" data-bs-slide-to="6">Contact</button></div>
         </div>
     </nav>
 
-    <Section id="carouselcard" class="carousel slide mt-2 bg-black bg-opacity-50 rounded-3 shadow-lg d-flex align-items-stretch">
+    <Section id="carouselcard" class="carousel slide mt-2 bg-transparent rounded-3 shadow-lg d-flex align-items-stretch">
         <div class="carousel-inner">
             <div class="carousel-item active ">
                 <div class="container col-xxl-8 px-4 py-5">
@@ -247,8 +247,8 @@
                             <p class="lead text-white">Disponible pour rendez-vous dans tout l'agglomeration d'amiens
                                 ainsi qu'a distance </p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                                <button type="button" class="btn btn-danger btn-lg px-4 me-md-2">E-mail</button>
-                                <button type="button" class="btn btn-outline-danger btn-lg px-4">LinkedIn</button>
+                                <button type="button" class="btn btn-danger btn-lg px-4 me-md-2"> <a class="text-decoration-none text-white" href="mailto:Mehdi.Benkebouche@gmail.com"> E-mail</a></button>
+                                <button type="button" class="btn btn-outline-danger btn-lg px-4"> <a class="text-decoration-none text-danger" href="https://www.linkedin.com/in/mehdi-benkebouche-b41588238" target="_blank"> LinkedIn </a></button>
                             </div>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
     </Section>
 
 </main>
-   
+
 
 
 
@@ -269,6 +269,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <script src="assets/js/particles.js" ></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
