correction des fautes

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
                     data-bs-target="#carouselcard" data-bs-slide-to="0">Profil</button></div>
             <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
-                    data-bs-target="#carouselcard" data-bs-slide-to="1">Diplomes</button></div>
+                    data-bs-target="#carouselcard" data-bs-slide-to="1">Diplômes</button></div>
             <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
-                    data-bs-target="#carouselcard" data-bs-slide-to="2">Experience</button></div>
+                    data-bs-target="#carouselcard" data-bs-slide-to="2">Expérience</button></div>
             <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
-                    data-bs-target="#carouselcard" data-bs-slide-to="3">compertence</button></div>
+                    data-bs-target="#carouselcard" data-bs-slide-to="3">Compétences</button></div>
             <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
-                    data-bs-target="#carouselcard" data-bs-slide-to="4">Portofolio</button></div>
+                    data-bs-target="#carouselcard" data-bs-slide-to="4">Portfolio</button></div>
             <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
-                    data-bs-target="#carouselcard" data-bs-slide-to="5">Autre</button></div>
+                    data-bs-target="#carouselcard" data-bs-slide-to="5">Autres</button></div>
             <div class="nav-item"> <button class="btn btn-outline-danger my-1 mx-auto" type="button"
                     data-bs-target="#carouselcard" data-bs-slide-to="6">Contact</button></div>
         </div>
@@ -47,14 +47,14 @@
                         <div class="col-lg-6">
                             <h1 class="display-5 fw-bold lh-1 mb-3 text-white">Mehdi Benkebouche
                             </h1>
-                            <p class="lead text-white">Web Dev junior passioné d'informatique et de musique</p>
+                            <p class="lead text-white">Web Dev junior passionné d'informatique et de musique</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="carousel-item w-100 text-white ">
                 <div class="container px-4 py-5" id="hanging-icons">
-                    <h2 class="pb-2 border-bottom border-danger">Diplomes</h2>
+                    <h2 class="pb-2 border-bottom border-danger">Diplômes</h2>
                     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                         <div class="col d-flex align-items-start">
                             <div class="icon-square text-light flex-shrink-0 me-3">
@@ -72,7 +72,7 @@
                                     <img src="assets/img/certificate-solid.svg" style="filter: invert(1);"></svg>
                             </div>
                             <div>
-                                <h2>License 3 Anglais</h2>
+                                <h2>Licence 3 Anglais</h2>
                                 <p>Option LLCER</p>
                             </div>
                         </div>
@@ -91,13 +91,13 @@
             </div>
             <div class="carousel-item w-100">
                 <div class="container px-4 py-5" id="boulot-cards">
-                    <h2 class="pb-2 border-bottom border-danger text-white">Experience professionel</h2>
+                    <h2 class="pb-2 border-bottom border-danger text-white">Expérience professionnelle</h2>
 
                     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5 justify-content-center">
                         <div class="col">
                             <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
                                 <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                                    <h4 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Télé-enqueteur Mediamétrie</h4>
+                                    <h4 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Télé-enquêteur Mediamétrie</h4>
                                     <p>2019-2020</p>
                                 </div>
                             </div>
@@ -116,7 +116,7 @@
             </div>
             <div class="carousel-item w-100">
                 <div class="container px-4 py-5 text-white" id="featured-3">
-                    <h2 class="pb-2 border-bottom border-danger">Experience FrontEnd</h2>
+                    <h2 class="pb-2 border-bottom border-danger">Expérience FrontEnd</h2>
                     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                         <div class="feature col">
                             <div class="feature-icon">
@@ -165,7 +165,7 @@
             </div>
             <div class="carousel-item w-100">
                 <div class="container px-4 py-5 text-white" id="featured-3">
-                    <h2 class="pb-2 border-bottom border-danger">Portofolio dev</h2>
+                    <h2 class="pb-2 border-bottom border-danger">Portfolio dev</h2>
                     <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 justify-content-center">
                         <div class="feature col">
                             <div class="feature-icon">
@@ -188,7 +188,7 @@
                                         style="height: 4em; width: 4em"></svg>
                             </div>
                             <h2>Exercice Scrum</h2>
-                            <p>Exercice réalisé lors de la seconde semaine de formation web dev, j'ai du assumé le role
+                            <p>Exercice réalisé lors de la seconde semaine de formation web dev, j'ai dû assumer le rôle
                                 de chef de projet et de scrum master</p>
                             <a href="https://jidess.github.io/Site_Bourse_High_Tech/" target="_blank"
                                 class="btn btn-danger">
@@ -200,7 +200,7 @@
             </div>
             <div class="carousel-item w-100">
                 <div class="container px-4 py-5" id="custom-cards">
-                    <h2 class="pb-2 border-bottom border-danger text-white">Autre</h2>
+                    <h2 class="pb-2 border-bottom border-danger text-white">Autres</h2>
 
                     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
                         <div class="col">
@@ -244,8 +244,8 @@
                         </div>
                         <div class="col-lg-6">
                             <h1 class="display-5 fw-bold lh-1 mb-3 text-white">Contact</h1>
-                            <p class="lead text-white">Disponible pour rendez-vous dans tout l'agglomeration d'amiens
-                                ainsi qu'a distance </p>
+                            <p class="lead text-white">Disponible pour rendez-vous dans toute l'agglomération d'Amiens
+                                ainsi qu'à distance </p>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                                 <button type="button" class="btn btn-danger btn-lg px-4 me-md-2"> <a class="text-decoration-none text-white" href="mailto:Mehdi.Benkebouche@gmail.com"> E-mail</a></button>
                                 <button type="button" class="btn btn-outline-danger btn-lg px-4"> <a class="text-decoration-none text-danger" href="https://www.linkedin.com/in/mehdi-benkebouche-b41588238" target="_blank"> LinkedIn </a></button>
