fix du scroll mais ça pose un blem d'ux pour l'hamburger

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-black">
-<main class="d-flex flex-column-reverse flex-md-column vh-100" id="particles-js">
+<main class="d-flex flex-column-reverse flex-md-column vh-102" id="particles-js">
     <nav class="navbar navbar-dark navbar-expand-md bg-black border-bottom border-top border-danger gap-2">
         <span class="fs-4 mx-3 text-secondary">Mehdi Benkebouche</span>
         <button class="navbar-toggler light" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu"
@@ -35,7 +35,7 @@
         </div>
     </nav>
 
-    <Section id="carouselcard" class="carousel slide mt-2 bg-transparent rounded-3 shadow-lg d-flex align-items-stretch">
+    <Section id="carouselcard" class="carousel slide mt-2 rounded-3 shadow-lg d-flex ">
         <div class="carousel-inner">
             <div class="carousel-item active ">
                 <div class="container col-xxl-8 px-4 py-5">
@@ -92,7 +92,6 @@
             <div class="carousel-item w-100">
                 <div class="container px-4 py-5" id="boulot-cards">
                     <h2 class="pb-2 border-bottom border-danger text-white">Expérience professionnelle</h2>
-
                     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5 justify-content-center">
                         <div class="col">
                             <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg">
