correct des ordres d'xp

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 
 <body class="bg-black overflow-hidden text-white">
+
+    <!-- toute la page est sous flex pour permetre le changement de position de la navbar  -->
+
+
     <main class="d-flex flex-column-reverse flex-md-column vh-100" id="particles-js">
         <nav class="navbar navbar-dark navbar-expand-md bg-black border-bottom border-top border-danger gap-2">
             <span class="fs-4 mx-3 text-secondary">Mehdi Benkebouche</span>
@@ -18,6 +22,8 @@
                         alt="Telecharger mon cv"
                         style="width: 2em; height:2em; filter: invert(40%) sepia(93%) saturate(3089%) hue-rotate(331deg) brightness(84%) contrast(103%);"></a>
             </div>
+
+            <!-- toggle du menu hamburger  -->
             <button class="navbar-toggler light" type="button" data-bs-toggle="collapse"
                 data-bs-target="#toggleMobileMenu" aria-controls="#toggleMobileMenu" aria-expanded="false"
                 aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span></button>
@@ -96,16 +102,6 @@
                         <h2 class="pb-2 border-bottom border-danger">Expérience professionnelle</h2>
                         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 justify-content-center">
                             <div class="col d-flex align-items-start">
-                                <div class="icon-square text-white flex-shrink-0 me-3">
-                                    <svg class="bi" width="1em" height="1em">
-                                        <img src="assets/img/phone-solid.svg" style="filter: invert(1);"></svg>
-                                </div>
-                                <div>
-                                    <h2>Télé-enquêteur Mediamétrie</h2>
-                                    <p>2019-2020</p>
-                                </div>
-                            </div>
-                            <div class="col d-flex align-items-start">
                                 <div class="icon-square text-light flex-shrink-0 me-3">
                                     <svg class="bi" width="1em" height="1em">
                                         <img src="assets/img/question-solid.svg" style="filter: invert(1);"></svg>
@@ -113,6 +109,16 @@
                                 <div>
                                     <h2>Stage de formation</h2>
                                     <p>2022</p>
+                                </div>
+                            </div>
+                            <div class="col d-flex align-items-start">
+                                <div class="icon-square text-white flex-shrink-0 me-3">
+                                    <svg class="bi" width="1em" height="1em">
+                                        <img src="assets/img/phone-solid.svg" style="filter: invert(1);"></svg>
+                                </div>
+                                <div>
+                                    <h2>Télé-enquêteur Mediamétrie</h2>
+                                    <p>2019-2020</p>
                                 </div>
                             </div>
                         </div>
