--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </div>
                                 <div>
                                     <h2>Bac technologique STI2D</h2>
-                                    <p>Option système d'inforamation et numérique</p>
+                                    <p>Option système d'information et numérique</p>
                                 </div>
                             </div>
                         </div>
